Add favicon and apple-touch-icon links to index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <meta name="author" content="Oxford 365 Recovery" />
   <meta name="theme-color" content="#1F2F3D" />
   <link rel="manifest" href="/manifest.json" />
+  <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="apple-touch-icon" href="/logo.png" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
