--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="manifest" href="/manifest.json" />
   <link rel="icon" type="image/png" href="/logo.png" />
   <link rel="apple-touch-icon" href="/logo.png" />
+  <link rel="canonical" href="https://oxford365recovery.co.uk/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
