SEO: Update domain from .co.uk to .com

--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
   <link rel="manifest" href="/manifest.json" />
   <link rel="icon" type="image/png" href="/logo.png" />
   <link rel="apple-touch-icon" href="/logo.png" />
-  <link rel="canonical" href="https://oxford365recovery.co.uk/" />
+  <link rel="canonical" href="https://oxford365recovery.com/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://oxford365recovery.co.uk/" />
+  <meta property="og:url" content="https://oxford365recovery.com/" />
   <meta property="og:title" content="Oxford 365 Recovery | 24/7 Emergency Assistance" />
   <meta property="og:description"
     content="Stranded in Oxford? We offer fast, reliable, family-run vehicle recovery. Serving M40, A34, A40 and Oxford City Centre 24/7." />
-  <meta property="og:image" content="https://oxford365recovery.co.uk/logo.png" />
+  <meta property="og:image" content="https://oxford365recovery.com/logo.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://oxford365recovery.co.uk/" />
+  <meta property="twitter:url" content="https://oxford365recovery.com/" />
   <meta property="twitter:title" content="Oxford 365 Recovery | 24/7 Emergency Assistance" />
   <meta property="twitter:description"
     content="Stranded in Oxford? We offer fast, reliable, family-run vehicle recovery. Serving M40, A34, A40 and Oxford City Centre 24/7." />
-  <meta property="twitter:image" content="https://oxford365recovery.co.uk/logo.png" />
+  <meta property="twitter:image" content="https://oxford365recovery.com/logo.png" />
 
   <!-- JSON-LD Structured Data for AI Search -->
   <script type="application/ld+json">
@@ -38,9 +38,9 @@
       "@context": "https://schema.org",
       "@type": ["AutoRepair", "EmergencyService"],
       "name": "Oxford 365 Recovery",
-      "image": "https://oxford365recovery.co.uk/logo.png",
-      "@id": "https://oxford365recovery.co.uk",
-      "url": "https://oxford365recovery.co.uk",
+      "image": "https://oxford365recovery.com/logo.png",
+      "@id": "https://oxford365recovery.com",
+      "url": "https://oxford365recovery.com",
       "telephone": "01865 999 999",
       "priceRange": "$$",
       "address": {
