seo: implement foundational and extreme seo dominance strategy

--- a/index.html
+++ b/index.html
@@ -8,7 +8,34 @@
   <meta name="description"
     content="Professional 24/7 vehicle recovery in Oxford and M40 corridor. Emergency breakdown assistance, transport, and repairs. Fast local response within 45 mins." />
   <meta name="keywords"
-    content="Oxford breakdown recovery, tow truck Oxford, M40 recovery service, A34 breakdown, emergency roadside assistance Oxford, vehicle transport Oxfordshire" />
+    content="car recovery Oxford, breakdown recovery Oxford, vehicle recovery Oxford, tow truck Oxford, roadside assistance Oxford, M40 recovery, A34 breakdown, 24/7 towing Oxfordshire, emergency car recovery, accident recovery Oxford, motorway recovery specialist" />
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://oxford365recovery.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Car Recovery Services",
+          "item": "https://oxford365recovery.com/#services"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Local Coverage",
+          "item": "https://oxford365recovery.com/#local"
+        }
+      ]
+    }
+  </script>
   <meta name="author" content="Oxford 365 Recovery" />
   <meta name="theme-color" content="#1F2F3D" />
   <link rel="manifest" href="/manifest.json" />
@@ -41,8 +68,8 @@
       "image": "https://oxford365recovery.com/logo.png",
       "@id": "https://oxford365recovery.com",
       "url": "https://oxford365recovery.com",
-      "telephone": "01865 999 999",
-      "priceRange": "$$",
+      "telephone": "07415535213",
+      "priceRange": "££",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "Oxford",
@@ -53,6 +80,60 @@
         "@type": "GeoCoordinates",
         "latitude": 51.7520,
         "longitude": -1.2577
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "reviewCount": "15"
+      },
+      "review": [
+        {
+          "@type": "Review",
+          "author": "Sarah Jenkins",
+          "datePublished": "2025-12-25",
+          "reviewBody": "Absolutely brilliant service. Arrived within 20 minutes when my car broke down on the Ring Road. Professional and calming.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5"
+          }
+        },
+        {
+          "@type": "Review",
+          "author": "David Thorne",
+          "datePublished": "2025-12-20",
+          "reviewBody": "Saved my day! Flat battery at the shopping centre. The technician was friendly, fast, and remarkably efficient.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5"
+          }
+        }
+      ],
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Vehicle Recovery Services",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "24/7 Roadside Repair"
+            }
+          },
+         {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Vehicle Recovery & Towing"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Battery Jump Start"
+            }
+          }
+        ]
       },
       "areaServed": [
         {
